tests/samples/invalid/pointer_to_const.pn
const C: u8 = 200;

fn foo(x: &&u8)
{
	// This should not be allowed because pointees are mutable.
	// Use a view instead?
	&x = &C;
}

fn main()
{
	var a: u8 = 17;
	var x: &u8 = &a;
	foo(&&x);
	return: x
}
